@@ -1,3 +1,8 @@
+2011-06-10
+
+	* src/textview.c: added border line before and after headers.
+	  Made attachments display more graphical.
+
 2011-06-09
 
 	* src/account_dialog.c
